# plugin-freedom-system

./: .gitignore  CMakeLists.txt  PLUGINS.md  README.md
.claude/: preferences-README.md  settings.json  system-config.json
.claude/aesthetics/: README.md  manifest.json
.claude/agents/: dsp-agent.md  gui-agent.md  opus-model-switcher.md  research-planning-agent.md  troubleshoot-agent.md  ui-design-agent.md  ui-finalization-agent.md  validation-agent.md
.claude/commands/: clean.md  clear-cache.md  continue.md  destroy.md  doc-fix.md  dream.md  implement.md  improve.md  install-plugin.md  package.md  pfs.md  reconcile.md  research.md  reset-to-ideation.md  setup.md  show-standalone.md  test.md  uninstall.md
.claude/hooks/: PreCompact.sh  SessionStart.sh  Stop.sh  UserPromptSubmit.sh
.claude/schemas/: README.md  subagent-report.json
.claude/utils/: validation-cache.md  validation-cache.sh
.github/workflows/: build-windows.yml
plugins/AngelGrain/: .continue-here.md  CHANGELOG.md  CMakeLists.txt
plugins/AngelGrain/.ideas/: plan.md  (+3 more)
plugins/AutoClip/: CHANGELOG.md  CMakeLists.txt  NOTES.md
plugins/BugosEQ/: .continue-here.md
plugins/Chaosverb/: CMakeLists.txt
plugins/Chaosverb/.ideas/: architecture.md  creative-brief.md  parameter-spec-draft.md  parameter-spec.md  plan.md
plugins/Chaosverb/.ideas/mockups/: v1-CMakeLists-SNIPPET.txt  v1-PluginEditor-TEMPLATE.cpp  v1-PluginEditor-TEMPLATE.h  v1-integration-checklist.md  v1-ui-test.html  v1-ui.html  v1-ui.yaml
plugins/Chaosverb/Source/: ChaosverbDiffuser.cpp  ChaosverbDiffuser.h  ChaosverbDucking.h  ChaosverbEQ.cpp  ChaosverbEQ.h  ChaosverbFDN.h  ChaosverbWowFlutter.cpp  ChaosverbWowFlutter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor_backup.cpp  PluginProcessor_backup.h
plugins/Chaosverb/Source/ui/public/: index.html
plugins/DriveVerb/: .continue-here.md  CHANGELOG.md  CMakeLists.txt
plugins/Drum808/: .dsp-phase-3.1-report.json  CMakeLists.txt
plugins/DrumRoulette/: .continue-here.md  CHANGELOG.md  CMakeLists.txt  stage3-report.json  stage5.1-report.json
plugins/FlutterVerb/: .continue-here.archived.md  .continue-here.md  CHANGELOG.md  CMakeLists.txt
plugins/FlutterVerb/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/FlutterVerb/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v2-ui-test.html  v3-ui-test.html  v4-ui-test.html  v5-ui-test.html  v6-CMakeLists.txt  v6-PluginEditor.cpp  v6-PluginEditor.h  v6-integration-checklist.md  v6-ui.html  v6-ui.yaml
plugins/FlutterVerb/Presets/: Bright Plate.preset  Dark Ambient.preset  Default.preset  Large Hall.preset  Lo-Fi Tape.preset  Small Room.preset  Tape Warble.preset
plugins/FlutterVerb/Source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
plugins/FlutterVerb/Source/ui/public/: index.html
plugins/GainKnob/: .continue-here.md  CHANGELOG.md  CMakeLists.txt
plugins/GainKnob/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/GainKnob/.ideas/mockups/: v1-CMakeLists.txt  v1-PluginEditor.cpp  v1-PluginEditor.h  v1-integration-checklist.md  v1-ui-test.html  v1-ui.html  v1-ui.yaml
plugins/GainKnob/Presets/: Half Volume.preset  Quiet.preset  Silence.preset  Subtle Cut.preset  Unity.preset
plugins/GainKnob/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/GainKnob/Source/ui/public/: index.html
plugins/LushPad/: .continue-here.md  NOTES.md
plugins/MinimalKick/: .continue-here.md
plugins/MixMentor/: CMakeLists.txt  NOTES.md
plugins/MixMentor/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/MixMentor/Source/analysis/: DynamicsAnalyzer.h  MixAnalysisResult.h  StereoAnalyzer.h  TonalityAnalyzer.h
plugins/NBS_DynaDrive/: .continue-here.md  CHANGELOG.md  CMakeLists.txt
plugins/NBS_DynaDrive/.ideas/: adaa-technical-reference.md  architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/NBS_DynaDrive/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v2-ui-test.html  v2-ui.yaml  v3-ui-test.html  v3-ui.yaml  v4-ui-test.html  v4-ui.yaml  v5-ui-test.html  v5-ui.yaml  v6-ui-test.html  v6-ui.yaml  v7-ui-test.html  v7-ui.yaml  v8-CMakeLists.txt  v8-PluginEditor.cpp  v8-PluginEditor.h  v8-integration-checklist.md  v8-ui.html  v8-ui.yaml
plugins/NBS_DynaDrive/Source/: ADAASaturator.h  DynamicsEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/NBS_DynaDrive/Source/ui/public/: index.html
plugins/OrganicHats/: .continue-here.md  CHANGELOG.md  CMakeLists.txt
plugins/Scatter/: .continue-here.md  CHANGELOG.md  CMakeLists.txt
plugins/Scatter/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/Scatter/.ideas/mockups/: v2-ui-test.html  v2-ui.yaml  v3-ui-test.html  v3-ui.yaml  v4-CMakeLists-SNIPPET.txt  v4-PluginEditor-TEMPLATE.cpp  v4-PluginEditor-TEMPLATE.h  v4-integration-checklist.md  v4-ui.html  v4-ui.yaml
plugins/Scatter/Presets/: 01_Default.txt  02_Shimmer.txt  03_Stutter.txt  04_Ambient_Wash.txt  05_Granular_Reverse.txt
plugins/Scatter/Source/: PluginEditor.cpp
plugins/TEMPLATE-HEADLESS-EDITOR/: PluginEditor.cpp  PluginEditor.h  README.md
plugins/TapeAge/: CHANGELOG.md  CMakeLists.txt  NOTES.md
scripts/: build-and-install.sh  verify-backup.sh
troubleshooting/api-usage/: webview-es6-module-loading-frozen-knobs-lushverb-20251111.md  webview-parameter-not-updating-wrong-event-format-JUCE-20251108.md
troubleshooting/gui-issues/: absolute-knob-drag-webview-20251111.md  webview-frame-load-interrupted-TapeAge-20251111.md  webview-knob-hover-shake-microscale-transform-20251112.md  webview-knobs-frozen-multiple-causes-TapeAge-20251111.md  webview-parameter-undefined-event-callback-TapeAge-20251111.md
troubleshooting/patterns/: HOW-TO-ADD-CRITICAL-PATTERNS.md  README.md  common-solutions.md  juce8-critical-patterns.md
troubleshooting/runtime-issues/: synth-no-audio-missing-is-synth-LushPad-20251113.md  vst3-bus-config-effect-missing-input-Shake-20251106.md
(+204 files in other folders)
